nginx-service-nodeport.yaml
# $ kubectl get svc
# NAME             TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)          AGE
# kubernetes       ClusterIP   10.96.0.1        <none>        443/TCP          29d
# nginx            ClusterIP   10.111.9.147     <none>        80/TCP           12m
# nginx-nodeport   NodePort    10.100.111.247   <none>        8080:31103/TCP   1m

# $ minikube ssh
# $ curl 10.100.111.247:8080
# <!DOCTYPE ......
# $ curl 10.111.9.147
# <!DOCTYPE ......
# exit

# $ minikube ip
# 192.168.99.100
# $ curl 192.168.99.100:31103
# <!DOCTYPE ......


apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
